Modif pages index et emploi fait. finalisation.

--- a/emploi.html
+++ b/emploi.html
@@ -15,15 +15,15 @@
 
 <body>
     <div id="app" class="column">
-        <!---->
+        <!--====================START HEADER====================-->
         <header class="bg-red my-header">
             <div class="nav-bar">
-                <!---->
+                <!--====================START LOGO====================-->
                 <div class="box-logo">
                     <img class="logo" src="img/logo_white.png" alt="">
                 </div>
-                <!---->
-                <!---->
+                <!--====================END LOGO====================-->
+                <!--====================START MENU====================-->
                 <div class="">
                     <nav>
                         <ul class="">
@@ -54,17 +54,18 @@
                         </ul>
                     </nav>
                 </div>
-                <!---->
+                <!--====================END MENU====================-->
             </div>
         </header>
-        <!---->
-        <!---->
+        <!--====================END HEADER====================-->
+        <!--====================START MAIN SECTION====================-->
         <section class="column bg-light main">
-            <!---->
+            <!--====================START MAIN TITLE H1====================-->
             <h1 class="text-center text-dark-gray-30">Kinshasa Digital Recrute</h1>
-            <!---->
-            <!---->
+            <!--====================END MAIN TITLE H1====================-->
+            <!--====================START BLOC recrute====================-->
             <div class="row content-style-evenly padding-top-down-6">
+                <!--====================START BLOC agent de télémarketing B2B====================-->
                 <div class="bg-gray my-width-40 padding-left-right-2 radius-all-10">
                     <h2 class="text-big-1">
                         Agent de <br> télémarketing B2B
@@ -124,8 +125,8 @@
                         </a>
                     </p>
                 </div>
-                <!---->
-                <!---->
+                <!--====================END BLOC agent de télémarketing B2B====================-->
+                <!--====================START BLOC Développeur====================-->
                 <div class="bg-gray my-width-40 padding-left-right-2 radius-all-10">
                     <h2 class="text-big-1">
                         Développeur
@@ -196,10 +197,10 @@
                         </a>
                     </p>
                 </div>
-                <!---->
+                <!--====================END BLOC Développeur====================-->
             </div>
-            <!---->
-            <!---->
+            <!--====================START BLOC recrute====================-->
+            <!--====================START BLOC formulaire de contact====================-->
             <div class="bg-dark padding-top-down-6">
                 <h2 class="text-gray-50 text-center">
                     Formulaire de contact
@@ -309,7 +310,7 @@
                             </p>
                         </div>
                         <p class="row my-width-93">
-                            <textarea class="form-input" name="demande" id="demande" cols="30" rows="10" placeholder="Demande : 
+                            <textarea class="form-input" name="demande" id="demande" placeholder="Demande : 
                             merci d'indiquer le maximum de précision 
                             afin qu'on puisse vous donner une réponse complète"
                                 style="resize: none; overflow-y: scroll; height: 134px; width:100%">
@@ -341,9 +342,10 @@
                     <!---->
                 </form>
             </div>
+            <!--====================END BLOC formulaire de contact====================-->
         </section>
-        <!---->
-        <!---->
+        <!--====================END MAIN SECTION====================-->
+        <!--====================START FOOTER====================-->
         <footer class="row content-style-center item-style-top padding-top-down-6 bg-dark-gray-50 my-footer">
             <div class="my-width-45 margin-left-right-20">
                 <address class="text-light margin-top-down-20">
@@ -405,6 +407,7 @@
                 </div>
             </div>
         </footer>
+        <!--====================END FOOTER====================-->
     </div>
 </body>
 
