--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
 <body>
     <div id="app" class="column">
-        <!---->
+        <!--====================START HEADER====================-->
         <header class="bg-red my-header">
             <div class="nav-bar">
-                <!---->
+                <!--====================START LOGO====================-->
                 <div class="box-logo">
                     <img class="logo" src="img/logo_white.png" alt="">
                 </div>
-                <!---->
-                <!---->
+                <!--====================END LOGO====================-->
+                <!--====================START MENU====================-->
                 <div class="">
                     <nav>
                         <ul class="">
@@ -54,20 +54,20 @@
                         </ul>
                     </nav>
                 </div>
-                <!---->
+                <!--====================END MENU====================-->
             </div>
         </header>
-        <!---->
-        <!---->
+        <!--====================END HEADER====================-->
+        <!--====================START MAIN SECTION====================-->
         <section class="column main">
-            <!---->
+            <!--====================START HERO====================-->
             <div class="my-hero column">
-                <!---->
+                <!--====================START MAIN TITLE H1====================-->
                 <h1 class="transform-text-main-title">
                     Besoin de <br />développeurs <br /> <span class="text-gold">&lt; qualifiés &gt; ?</span>
                 </h1>
-                <!---->
-                <!---->
+                <!--====================END MAIN TITLE H1====================-->
+                <!--====================START BUTTON BLOC====================-->
                 <div class="row section-btn-hero">
                     <div>
                         <a class="btn btn-border-light text-red btn-lg bg-light btn-out-line-light-hover" href="#">
@@ -80,15 +80,15 @@
                         </a>
                     </div>
                 </div>
-                <!---->
-                <!---->
+                <!--====================END BUTTON BLOC====================-->
+                <!--====================START TEXT HERO====================-->
                 <p class="block-55 text-center">
                     Des développeurs expérimentés prêt à rejoindre votre équipe en
                     full remote et avec les compétences
                     dont vous avez besoin.
                 </p>
-                <!---->
-                <!---->
+                <!--====================END TEXT HERO====================-->
+                <!--====================START TECHNOS LOGO HERO====================-->
                 <div class="row bloc-techno content-style-center">
                     <ul class="row content-style-evenly">
                         <li>
@@ -117,13 +117,13 @@
                         </li>
                     </ul>
                 </div>
-                <!---->
+                <!--====================END TECHNOS LOGO HERO====================-->
             </div>
-            <!---->
-            <!---->
+            <!--====================END HERO====================-->
+            <!--====================START SECTION développeurs qualifiés====================-->
             <div class="bg-gray">
                 <div class="row bloc-dev-qualifies">
-                    <!---->
+                    <!--====================START SECTION IMG SUP====================-->
                     <div class="my-width-40">
                         <diV>
                             <img class="img-back" src="img/illustrations/texaf_campus.jpg" alt="texaf campus">
@@ -132,8 +132,8 @@
                             <img class="img-befor" src="img/illustrations/kda_cohorte_2020.jpg" alt="kda cohorte 2020">
                         </diV>
                     </div>
-                    <!---->
-                    <!---->
+                    <!--====================END SECTION IMG SUP====================-->
+                    <!--====================START BLOC DEV QUALIFIÉ====================-->
                     <div class="my-width-60 column bloc-dev-items">
                         <!---->
                         <h2 class="text-dark-gray-30">
@@ -197,11 +197,11 @@
                         </div>
                         <!---->
                     </div>
-                    <!---->
+                    <!--====================END BLOC DEV QUALIFIÉ====================-->
                 </div>
             </div>
-            <!---->
-            <!---->
+            <!--====================END SECTION développeurs qualifiés====================-->
+            <!--====================START SECTION plaisir de travailler====================-->
             <div class="bg-red padding-top-down-10">
                 <h2 class="text-center text-light">
                     Nous avons le plaisir de travailler avec
@@ -226,8 +226,8 @@
                     </p>
                 </div>
             </div>
-            <!---->
-            <!---->
+            <!--====================END SECTION plaisir de travailler====================-->
+            <!--====================START SECTION accompagnons vos projets====================-->
             <div class="bg-gray padding-top-down-10">
                 <h2 class="text-center text-dark-gray-30">
                     Nous accompagnons vos projets
@@ -261,8 +261,8 @@
                     </div>
                 </div>
             </div>
-            <!---->
-            <!---->
+            <!--====================END SECTION accompagnons vos projets====================-->
+            <!--====================START SECTION avons développé====================-->
             <div class="bg-red padding-top-down-10">
                 <h2 class="text-center text-light">
                     Ce que nous avons développé
@@ -363,13 +363,14 @@
                     <!---->
                 </div>
             </div>
-            <!---->
-            <!---->
+            <!--====================END SECTION avons développé====================-->
+            <!--====================START SECTION notre expertise====================-->
             <div class="bg-light padding-top-down-10">
                 <h2 class="text-center text-dark-gray-30">
                     Notre expertise
                 </h2>
                 <div class="row content-style-evenly padding-top-down-2">
+                    <!--====================START BLOC Hardskills====================-->
                     <div class="my-width-50 card bg-gray">
                         <!---->
                         <h3 class="text-light bg-red card-header">Hardskills</h3>
@@ -486,6 +487,8 @@
                             <!---->
                         </div>
                     </div>
+                    <!--====================END BLOC Hardskills====================-->
+                    <!--====================START BLOC Soft Skills====================-->
                     <div class="my-width-40 card bg-gray">
                         <h3 class="text-light bg-purpele-dark card-header">Soft Skills</h3>
                         <div class="padding-all-5">
@@ -500,13 +503,14 @@
                             </div>
                         </div>
                     </div>
+                    <!--====================END BLOC Soft Skills====================-->
                 </div>
             </div>
-            <!---->
-            <!---->
+            <!--====================END SECTION notre expertise====================-->
+            <!--====================START SECTION Prêt?====================-->
             <div class="bg-red-dark padding-top-down-10">
                 <h2 class="text-center text-light">
-                    Pret ?
+                    Prêt ?
                 </h2>
                 <div class="row content-style-center padding-top-down-4 text-light">
                     <!---->
@@ -581,8 +585,8 @@
                     </p>
                 </div>
             </div>
-            <!---->
-            <!---->
+            <!--====================END SECTION Prêt?====================-->
+            <!--====================START SECTION emploi de qualité====================-->
             <div class="row content-style-center bg-gray padding-top-down-10">
                 <div class="my-width-30">
                     <h3>
@@ -662,8 +666,8 @@
                     </div>
                 </div>
             </div>
-            <!---->
-            <!---->
+            <!--====================END SECTION emploi de qualité====================-->
+            <!--====================START SECTION dans les médias====================-->
             <div class="bg-super-dark padding-top-down-5">
                 <h2 class="text-center text-light">
                     Kinshasa Digital dans les médias
@@ -688,8 +692,8 @@
                     </div>
                 </div>
             </div>
-            <!---->
-            <!---->
+            <!--====================END SECTION dans les médias====================-->
+            <!--====================START SECTION Ils nous soutiennent====================-->
             <div class="bg-light padding-top-down-10">
                 <h2 class="text-center text-dark-gray-30">
                     Ils nous soutiennent
@@ -825,10 +829,10 @@
                     </div>
                 </div>
             </div>
-            <!---->
+            <!--====================END SECTION Ils nous soutiennent====================-->
         </section>
-        <!---->
-        <!---->
+        <!--====================END MAIN SECTION====================-->
+        <!--====================START FOOTER====================-->
         <footer class="row content-style-center item-style-top padding-top-down-6 bg-dark-gray-50 my-footer">
             <div class="my-width-45 margin-left-right-20">
                 <address class="text-light margin-top-down-20">
@@ -890,7 +894,7 @@
                 </div>
             </div>
         </footer>
-        <!---->
+        <!--====================END FOOTER====================-->
     </div>
 </body>
 
