Modif pages index et emploi fait. finalisation.

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </h2>
                 <div class="row content-style-evenly padding-top-down-4">
                     <div class="my-width-45 text-center card-mini bg-light card-mini-border-top-yellow">
-                        <h3 class="text-red">&gt;Réaliser votre projet</h3>
+                        <h3 class="text-red">&gt; Réaliser votre projet</h3>
                         <p>
                             Engagez une équipe de développeurs de
                             Kinshasa Digital à un prix fixz pour livrer
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                     <div class="my-width-45 text-center card-mini bg-light card-mini-border-top-red">
-                        <h3 class="text-red">&gt;Integrer votre équipe</h3>
+                        <h3 class="text-red">&gt; Integrer votre équipe</h3>
                         <p>
                             Engagez un ou plusieurs développeurs
                             de Kinshasa Digital à des prix compétitifs pour
@@ -491,7 +491,7 @@
                     <!--====================START BLOC Soft Skills====================-->
                     <div class="my-width-40 card bg-gray">
                         <h3 class="text-light bg-purpele-dark card-header">Soft Skills</h3>
-                        <div class="padding-all-5">
+                        <div class="padding-top-0-autre-5">
                             <div class="padding-all-5 bg-gray-30 radius-all-10">
                                 <ol class="text-ubuntu-font">
                                     <li>Méthodologie agile (SCRUM)</li>
@@ -604,7 +604,7 @@
                         <img class="my-width-100" src="img/students.png" alt="students">
                     </p>
                 </div>
-                <div class="column my-width-50 content-style-evenly">
+                <div class="column my-width-50 content-style-evenly margin-top-30">
                     <div class="row content-style-evenly">
                         <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
                             <p>
