Modif pages index et emploi fait. finalisation.

--- a/emploi.html
+++ b/emploi.html
@@ -205,12 +205,23 @@
                 <h2 class="text-gray-50 text-center">
                     Formulaire de contact
                 </h2>
-                <p class="text-center text-bold text-light">
-                    Si vous souhaitez-vous préinscrire à la Kinshasa Digital
-                    Academy veuillez remplir le
-                    <a class="link-bold" href="#">
-                        formulaire de préinscription
-                    </a>.
+                <p>
+                    <div class="row content-style-center text-center text-bold">
+                        <div class="my-inlin-display text-light">
+                            Si vous souhaitez-vous préinscrire à la Kinshasa Digital
+                            Academy veuillez remplir le &nbsp;
+                        </div>
+                        <div class="my-inlin-display text-light under-line">
+                            <a class="link-bold link-dark-hovered" href="#">
+                                formulaire de préinscription
+                            </a>
+                            <br>
+                            <span></span>
+                        </div>
+                        <div class="my-inlin-display text-light">
+                            &nbsp;.
+                        </div>
+                    </div>
                 </p>
                 <form class="column my-width-100">
                     <!---->
