--- a/index.html
+++ b/index.html
@@ -588,11 +588,12 @@
             <!--====================END SECTION Prêt?====================-->
             <!--====================START SECTION emploi de qualité====================-->
             <div class="row content-style-center bg-gray padding-top-down-10">
-                <div class="my-width-30">
-                    <h3>
+                <!---->
+                <div class="my-width- my-width-45">
+                    <h2 class="text-dark-gray-30">
                         Nous créons de l' <span class="text-red">emploi de qualité</span>
                         en République Démocratique du Congo
-                    </h3>
+                    </h2>
                     <p>
                         Nous sommes fiers de vous proposer un service
                         de qualité qui permet de créer des emplois pour
@@ -604,64 +605,90 @@
                         <img class="my-width-100" src="img/students.png" alt="students">
                     </p>
                 </div>
-                <div class="column my-width-50 content-style-evenly margin-top-30">
-                    <div class="row content-style-evenly">
-                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
-                            <p>
-                                <img class="logo-20" src="img/illustrations/salary.png" alt="salary">
-                            </p>
-                            <h5>
-                                Rémunération
-                                ultra compétitive
-                            </h5>
-                            <p>
-                                Un salaire 5x supérieur au
-                                salaire moyen de la RDC.
-                            </p>
+                <!---->
+                <!---->
+                <div class="column my-width-45 content-style-evenly margin-top-30">
+                    <div class="row content-style-evenly my-width-100">
+                        <div class="my-width-45 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                            <div>
+                                <p>
+                                    <img class="logo-20" src="img/illustrations/salary.png" alt="salary">
+                                </p>
+                            </div>
+                            <div class="margin-top-moins-20">
+                                <h3>
+                                    Rémunération
+                                    ultra compétitive
+                                </h3>
+                            </div>
+                            <div class="margin-top-moins-10">
+                                <p>
+                                    Un salaire 5x supérieur au
+                                    salaire moyen de la RDC.
+                                </p>
+                            </div>
                         </div>
-                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
-                            <p>
-                                <img class="logo-20" src="img/illustrations/working.png" alt="working">
-                            </p>
-                            <h5>
-                                Infrastructure pro
-                            </h5>
-                            <p>
-                                Un environnement de
-                                travail de haute qualité avec
-                                connexion internet haut
-                                débit et une cantine offerte.
-                            </p>
+                        <div class="my-width-45 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                            <div>
+                                <p>
+                                    <img class="logo-20" src="img/illustrations/working.png" alt="working">
+                                </p>
+                            </div>
+                            <div class="margin-top-moins-20">
+                                <h3>
+                                    Infrastructure pro
+                                </h3>
+                            </div>
+                            <div class="margin-top-moins-10">
+                                <p>
+                                    Un environnement de
+                                    travail de haute qualité avec
+                                    connexion internet haut
+                                    débit et une cantine offerte.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="row content-style-evenly">
-                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
-                            <p>
-                                <img class="logo-20" src="img/illustrations/health.png" alt="health">
-                            </p>
-                            <h5>
-                                Couverture santé
-                            </h5>
-                            <p>
-                                Une couverture santé pour
-                                le développeur et sa famille
-                                dans le meilleur hopital de
-                                Kinshasa
-                            </p>
+                    <div class="row content-style-evenly my-width-100">
+                        <div class="my-width-45 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                            <div>
+                                <p>
+                                    <img class="logo-20" src="img/illustrations/health.png" alt="health">
+                                </p>
+                            </div>
+                            <div class="margin-top-moins-20">
+                                <h3>
+                                    Couverture santé
+                                </h3>
+                            </div>
+                            <div class="margin-top-moins-10">
+                                <p>
+                                    Une couverture santé pour
+                                    le développeur et sa famille
+                                    dans le meilleur hopital de
+                                    Kinshasa
+                                </p>
+                            </div>
                         </div>
-                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
-                            <p>
-                                <img class="logo-20" src="img/illustrations/training.png" alt="training">
-                            </p>
-                            <h5>
-                                Formation continue
-                            </h5>
-                            <p>
-                                Via la KDA et des mentors
-                                de renommée mondiale de
-                                Facebook, Microsoft, Adobe
-                                & Google.
-                            </p>
+                        <div class="my-width-45 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                            <div>
+                                <p>
+                                    <img class="logo-20" src="img/illustrations/training.png" alt="training">
+                                </p>
+                            </div>
+                            <div class="margin-top-moins-20">
+                                <h3>
+                                    Formation continue
+                                </h3>
+                            </div>
+                            <div class="margin-top-moins-20">
+                                <p>
+                                    Via la KDA et des mentors
+                                    de renommée mondiale de
+                                    Facebook, Microsoft, Adobe
+                                    & Google.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
