Modif pages index et emploi fait. finalisation.

--- a/index.html
+++ b/index.html
@@ -492,9 +492,9 @@
                     <div class="my-width-40 card bg-gray">
                         <h3 class="text-light bg-purpele-dark card-header">Soft Skills</h3>
                         <div class="padding-top-0-autre-5">
-                            <div class="padding-all-5 bg-gray-30 radius-all-10">
+                            <div class="padding-all-3 bg-gray-30 radius-all-10">
                                 <ol class="text-ubuntu-font">
-                                    <li>Méthodologie agile (SCRUM)</li>
+                                    <li>Méthodologie agile <br>(SCRUM)</li>
                                     <li>Travail en équipe</li>
                                     <li>Habitude du télé-travail</li>
                                     <li>Gestion du temps</li>
@@ -700,7 +700,8 @@
                     Kinshasa Digital dans les médias
                 </h2>
                 <div class="row content-style-center padding-top-down-2 text-light">
-                    <div class="row my-width-60 content-style-between">
+                    <div class="row my-width-50 content-style-between item-style-center">
+
                         <p>
                             <img src="img/medias/jeuneafr.png" alt="logo jeune afrique">
                         </p>
@@ -716,6 +717,7 @@
                         <p>
                             <img src="img/medias/digitalafr.png" alt="logo digital afrique">
                         </p>
+
                     </div>
                 </div>
             </div>
@@ -727,11 +729,12 @@
                 </h2>
                 <!---->
                 <!---->
-                <div class="row content-style-center padding-top-down-2 text-dark-gray-30">
-                    <div class="row my-width-93 content-style-between">
-                        <div class="padding-all-2 my-width-40">
+                <div class="row my-width-100 content-style-center">
+                    <div class="row my-width-100 content-style-evenly padding-top-down-2">
+                        <!---->
+                        <div class="box-twetter">
                             <p>
-                                <img class="radius-all-10 my-width-90"
+                                <img class="radius-all-10 my-width-100"
                                     src="img/kda-avec-le-president-felix-antoine-tshisekedi.jpg"
                                     alt="kda avec le president felix antoine tshisekedi">
                             </p>
@@ -740,41 +743,49 @@
                                 Présidence.
                             </p>
                         </div>
-                        <div class="padding-all-2 my-width-40">
+                        <!---->
+                        <!---->
+                        <div class="box-twetter">
                             <p>
-                                <img class="radius-all-10 my-width-90" src="img/kda-avec-le-premier-ministre-belge.jpg"
+                                <img class="radius-all-10 my-width-100" src="img/kda-avec-le-premier-ministre-belge.jpg"
                                     alt="kda avec le premier ministre belge">
                             </p>
                             <p>
                                 Visite du Premier Ministre Belge <strong>Alexander De Croo</strong>.
                             </p>
                         </div>
-                        <div class="padding-all-2 my-width-40">
+                        <!---->
+                        <!---->
+                        <div class="box-twetter">
                             <p>
-                                <img class="radius-all-10 my-width-90" src="img/kda-avec-l-ambassadeur-de-france.jpg"
+                                <img class="radius-all-10 my-width-100" src="img/kda-avec-l-ambassadeur-de-france.jpg"
                                     alt="kda avec l'ambassadeur de france">
                             </p>
                             <p>
                                 Soutien de l'Ambassadeur de France <strong>François Pujolas</strong>.
                             </p>
                         </div>
-                        <div class="padding-all-2 my-width-40">
+                        <!---->
+                        <!---->
+                        <div class="box-twetter">
                             <p>
-                                <img class="radius-all-10 my-width-90" src="img/kda-avec-facebook.jpg"
+                                <img class="radius-all-10 my-width-100" src="img/kda-avec-facebook.jpg"
                                     alt="kda avec facebook">
                             </p>
                             <p>
                                 Visite de <strong>Aïda Ndiaye</strong> de Facebook.
                             </p>
                         </div>
+                        <!---->
                     </div>
                 </div>
                 <!---->
                 <!---->
-                <div class="row text-dark-gray-30">
-                    <div class="row padding-left-right-4 my-width-80 content-style-between">
-                        <div class="padding-all-2 twetter-row my-width-30">
-                            <div class="radius-all-10 my-width-60">
+                <div class="row my-width-100 content-style-center">
+                    <div class="row my-width-100 content-style-evenly">
+                        <!---->
+                        <div class="box-twetter">
+                            <div>
                                 <blockquote class="twitter-tweet">
                                     <p lang="nl" dir="ltr">🇧🇪🇨🇩Ochtendlijk bezoek aan nieuwe <a
                                             href="https://twitter.com/KinshasaDigital?ref_src=twsrc%5Etfw">@KinshasaDigital</a>
@@ -790,8 +801,10 @@
                                 <script async src="https://platform.twitter.com/widgets.js"></script>
                             </div>
                         </div>
-                        <div class="padding-all-2 twetter-row my-width-30">
-                            <div class="radius-all-10 my-width-60">
+                        <!---->
+                        <!---->
+                        <div class="box-twetter">
+                            <div>
                                 <blockquote class="twitter-tweet">
                                     <p lang="fr" dir="ltr"><a
                                             href="https://twitter.com/hashtag/LaFranceenRDCongo?src=hash&amp;ref_src=twsrc%5Etfw">#LaFranceenRDCongo</a>
@@ -812,8 +825,10 @@
                                 <script async src="https://platform.twitter.com/widgets.js"></script>
                             </div>
                         </div>
-                        <div class="padding-all-2 twetter-row my-width-30">
-                            <div class="radius-all-10 my-width-60">
+                        <!---->
+                        <!---->
+                        <div class="box-twetter">
+                            <div>
                                 <blockquote class="twitter-tweet">
                                     <p lang="fr" dir="ltr">Grâce à leur appui <a
                                             href="https://twitter.com/hashtag/num%C3%A9rique?src=hash&amp;ref_src=twsrc%5Etfw">#numérique</a>,
@@ -837,8 +852,10 @@
                                 <script async src="https://platform.twitter.com/widgets.js"></script>
                             </div>
                         </div>
-                        <div class="padding-all-2 twetter-row my-width-30">
-                            <div class="radius-all-10 my-width-60">
+                        <!---->
+                        <!---->
+                        <div class="box-twetter">
+                            <div>
                                 <blockquote class="twitter-tweet">
                                     <p lang="en" dir="ltr">Kinshasa is one of my favorite city in the word because it’s
                                         the place where people and organizations like <a
@@ -853,6 +870,7 @@
                                 <script async src="https://platform.twitter.com/widgets.js"></script>
                             </div>
                         </div>
+                        <!---->
                     </div>
                 </div>
             </div>
